# agent-projects

./: .gitignore
openai-knowledge-retrieval/: .editorconfig  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
openai-knowledge-retrieval/app/backend/: pyproject.toml
openai-knowledge-retrieval/app/frontend/: eslint.config.js  index.html  package-lock.json  package.json
openai-knowledge-retrieval/cli/: config.py  env_utils.py  main.py
openai-knowledge-retrieval/docker/: docker-compose.qdrant.yaml
openai-knowledge-retrieval/evals/: harness.py  rubrics.py
openai-knowledge-retrieval/evals/datasets/: schema.py
openai-knowledge-retrieval/evals/generator/: auto_pipeline.py  candidates.py  canonicalize.py  corpus_iter.py  qgen.py  sampler.py
openai-knowledge-retrieval/evals/graders/: judge_prompts.py  runner.py  schema.py
openai-knowledge-retrieval/evals/metrics/: qa.py  retrieval.py
openai-knowledge-retrieval/evals/reporters/: html.py  (+3 more)
openai-knowledge-retrieval/extensions/: my_chunker.py
openai-knowledge-retrieval/ingestion/: custom_chunker_runner.py  pipeline.py  types.py
openai-knowledge-retrieval/models/: synthesis.py
openai-knowledge-retrieval/prompts/: loader.py
openai-knowledge-retrieval/retrieval/: citations.py  expansion.py  filter.py  pipeline.py  reranker.py
openai-knowledge-retrieval/stores/: base.py  custom_qdrant.py  openai_file_search.py
openai-knowledge-retrieval/telemetry/: logging.py
openai-knowledge-retrieval/templates/: custom-qdrant.yaml  openai.yaml  qdrant-heading.yaml  qdrant-hybrid.yaml  qdrant-recursive.yaml  qdrant-xml_aware.yaml
openai-knowledge-retrieval/tools/: retrieve_tool_spec.json
(+112 files in other folders)
